--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life Advice From Strangers | Anonymous Advice Platform</title>
     <meta name="description" content="Ask the question you can't ask the people you know. Receive anonymous advice from strangers who understand. No usernames, no likes, just humans helping humans." />
-    <meta name="author" content="LAFAS" />
+    <meta name="author" content="Echoes" />
 
     <meta property="og:title" content="Life Advice From Strangers" />
     <meta property="og:description" content="Ask anonymous questions and receive honest advice from strangers." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
